--- a/style.css
+++ b/style.css
@@ -46,6 +46,12 @@ body {
   background-image: url("img/icon-phone-header.svg");
 }
 
+.header-telegram {
+  padding-left: 25px;
+  background-image: url("img/icon-telegram-header.svg");
+  background-image: weight(1) height: (1)
+}
+
 .hero-image {
   margin-bottom: 620px;
 }
@@ -191,4 +197,10 @@ body {
 .footer-phone {
   padding-left: 25px;
   background-image: url("img/icon-phone-footer.svg");
+}
+
+.footer-telegram {
+  padding-left: 25px;
+  background-image: url("img/icon-telegram-header.svg");
+  background-image: weight(1) height: (1)
 }
